# nanoGPT

./: .gitignore  README.md  bench.py  config.py  configurator.py  evaluate.py  model.py  pyproject.toml  sample.py  train.py  utils.py
configs/: eval_gpt2.py  eval_gpt2_large.py  eval_gpt2_medium.py  eval_gpt2_xl.py  finetune_shakespeare.py  train_gpt2.py  train_shakespeare_char.py
data/openwebtext/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
tests/: test_config.py  test_configurator.py
