[project]
name = "nano-gpt"
version = "0.1.0"
description = "Nano GPT"
authors = [
    {name = "Joan", email = "jsalvasoler@hotmail.com"},
]
dependencies = [
    "tqdm",
]
requires-python = ">=3.10"

[tool.hatch.envs.default]
python = "3.11"
installer = "pip"
features = []

[build-system]
requires = ["hatchling<=1.25.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["nanoGPT"]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E731", "E741"]
